# dirtcomp

./: Cargo.toml  README.md  justfile
src/: commands.rs  config.rs  file_handling.rs  main.rs  traversal.rs
