[package]
name = "dirtcomp"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"

description = "A command line utility to compare modification times between file globs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["derive", "wrap_help"] }
glob = "0.3.1"
